kubernetes/base/blank.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: blank
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: "http"
    targetPort: 80
  selector:
    app: blank

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: blank
  labels:
    app: blank

spec:
  selector:
    matchLabels:
      app: blank

  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  revisionHistoryLimit: 6 #only keep last n revisions in history

  template:
    metadata:
      labels:
        app: blank

    spec:
      restartPolicy: Always

      containers:
        - name: blank
          image: nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: "nginx"
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 6
            periodSeconds: 25
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 9
            periodSeconds: 3
