kubernetes/base/frontend.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: "http"
    targetPort: 80
  selector:
    app: frontend

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend

spec:
  selector:
    matchLabels:
      app: frontend

  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1

  revisionHistoryLimit: 6 #only keep last n revisions in history

  template:
    metadata:
      labels:
        app: frontend

    spec:
      restartPolicy: Always

      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: gurdwara-displays-pvc

      containers:
        - name: frontend
          image: ghr-displays-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: "nginx"
              protocol: TCP
          volumeMounts:
            - name: server
              mountPath: /usr/share/nginx/html/server
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 6
            periodSeconds: 25
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 9
            periodSeconds: 3
