kubernetes/base/ingress.yaml
# ingress controller rules
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snaform-ingress
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  ingressClassName: traefik
  rules:
    - host: westbrom.snaform.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: wolves.snaform.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: stratford.snaform.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
